# ShadeGL

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  EBO.h  Mesh.h  Model.h  ShadeGL.h  Shader.h  Texture.h  Transform.cpp  Transform.h  VAO.h  VBO.h  image_io.h  stb_image.h
include/models/: box.h  floor.h  rectangle.h  skybox.h  sphere.h
resources/: 512.tga
shaders/: cube_fragment.glsl  fragment.glsl  framebuffer_fragment.glsl  framebuffer_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  stars_fragment.glsl  stars_vertex.glsl  vertex.glsl
src/: Camera.cpp  EBO.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  Transform.cpp  VAO.cpp  VBO.cpp  image.cpp  image_io.cpp  main.cpp  stb.cpp
